--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,20 @@
         <span class="editable-text" (click)="editingMission = true;">{{ missionName }}</span>
     </span>
     <ng-template #editMissionBlock>
-        <input #mission (keyup.enter)="updateMission(mission.value)" value="{{ missionName }}"/>
-        <button (click)="updateMission(mission.value)">save</button>
+        <input #mission (keyup.enter)="updateMission(mission.value)" value="{{ missionName }}" />
+        <button (click)="updateMission(mission.value)">Save</button>
     </ng-template>
 </h3>
+<h3>
+    Carrier Rocket:
+    <span *ngIf="!editingRocket; else editRocketName">
+        <span class="editable-text" (click)="editingRocket=true;">{{ rocketName }}</span>
+    </span>
+    <ng-template #editRocketName>
+        <input #rocket (keyup.enter)="updateRocket(rocket.value)" value="{{ rocketName }}" />
+        <button (click)="updateRocket(rocket.value)">Save</button>
+    </ng-template>
 
-<h3>Carrier Rocket: {{ rocketName }}</h3>
+
+
+</h3>
