part one complete

--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -6,13 +6,27 @@
 button {
     margin: 2px;
     cursor: pointer;
+    background-color: palegreen;
+    border-style: solid;
+    border-width: 1px;
+    border-color: gray;
+
+}
+
+button:disabled {
+    background-color: lightgray;
 }
 
 h3 {
     text-align: center;
 }
 
-/* Add an 'active' class to style the background of the 'Add to Cargo Hold' buttons. */
+.nearMaxMass {
+    color:rgb(165, 17, 17);
+    font-weight:bold;
+    font-size:18px;
+}
 
-
-/* Add the 'nearMaxMass' class style here: */
+#empty{
+    background-color:orange;
+}
