--- a/src/app/crew/crew.component.css
+++ b/src/app/crew/crew.component.css
@@ -18,5 +18,8 @@ img {
 h3 {
     text-align: center;
 }
+.selected{
+    color:goldenrod;
+}
 
 /* Add a 'selected' class here to style selected astronaut names a different color. */
